Salesforce CPQ/main/default/objects/AttributeValue__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Attribute Values</relationshipLabel>
    <relationshipName>AttributeValues</relationshipName>
    <type>Lookup</type>
</CustomField>