Salesforce CPQ/main/default/objects/AttributeValue__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <label>Attribute</label>
    <referenceTo>ProductAttribute__c</referenceTo>
    <relationshipLabel>Attribute Values</relationshipLabel>
    <relationshipName>AttributeValues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>