Salesforce CPQ/main/default/objects/AttributeValue__c/fields/FavoriteProduct__c.field-meta.xml
<CustomField>
    <fullName>FavoriteProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Favorite Product</label>
    <referenceTo>FavoriteProduct__c</referenceTo>
    <relationshipLabel>Attribute Values</relationshipLabel>
    <relationshipName>AttributeValues</relationshipName>
    <type>Lookup</type>
</CustomField>