Salesforce CPQ/main/default/objects/AttributeValue__c/fields/QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line</label>
    <referenceTo>QuoteLine__c</referenceTo>
    <relationshipLabel>Attribute Values</relationshipLabel>
    <relationshipName>AttributeValues</relationshipName>
    <type>Lookup</type>
</CustomField>