Salesforce CPQ/main/default/objects/AttributeValue__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Attribute Values</relationshipLabel>
    <relationshipName>AttributeValues</relationshipName>
    <type>Lookup</type>
</CustomField>