Salesforce CPQ/main/default/objects/AttributeValue__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value (Text)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>