Salesforce CPQ/main/default/objects/AttributeValue__c/fields/ValueDateTime__c.field-meta.xml
<CustomField>
    <fullName>ValueDateTime__c</fullName>
    <label>Value (Date Time)</label>
    <type>DateTime</type>
</CustomField>