Salesforce CPQ/main/default/objects/AttributeValue__c/fields/ValueNumber__c.field-meta.xml
<CustomField>
    <fullName>ValueNumber__c</fullName>
    <label>Value (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>